# progetto-labiagi_pick_e_delivery

./: README.html  README.md  dl.conf  frames.gv  index.html  package-lock.json  project_pick_and_delivery.txt  pushall.sh  rooms.json  server.js  sub.sh  test.sh  zzstartserver.sh
catkin_ws/: dl.conf
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/laser_location/: build.check.011.log.stderr  build.check.016.log.stderr  build.check.019.log.stderr  build.make.002.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.019.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.027.log.stderr  build.make.050.log.stderr  build.make.062.log.stderr
catkin_ws/logs/pick_e_delivery/: build.check.002.log.stderr  build.check.122.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.047.log.stderr  build.make.062.log.stderr  build.make.081.log.stderr  build.make.083.log.stderr  build.make.084.log.stderr  build.make.086.log.stderr  build.make.087.log.stderr  build.make.088.log.stderr  build.make.089.log.stderr  build.make.092.log.stderr  build.make.105.log.stderr  build.make.111.log.stderr  build.make.121.log.stderr  build.make.123.log.stderr  build.make.125.log.stderr  build.make.126.log.stderr  build.make.128.log.stderr
catkin_ws/logs/set_goal/: build.check.002.log.stderr  build.check.003.log.stderr  build.make.000.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr
catkin_ws/logs/srrg2_core/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
catkin_ws/logs/srrg2_core_ros/: build.check.005.log.stderr
catkin_ws/logs/srrg2_executor/: build.cmake.011.log.stderr  build.cmake.012.log.stderr
catkin_ws/logs/srrg2_laser_slam_2d/: build.check.000.log.stderr  build.cmake.000.log.stderr  (+1 more)
catkin_ws/src/pick_e_delivery/: CMakeLists.txt
catkin_ws/src/pick_e_delivery/msg/: NewGoal.msg  Pose.msg  Timeout.msg
catkin_ws/src/pick_e_delivery/src/: MainNode.cpp  MainNode_OLD.cpp  Position.cpp  SetGoal.cpp
catkin_ws/src/pick_e_delivery/srv/: setWaitPackInterval.srv
catkin_ws/src/set_goal/: CMakeLists.txt  package.xml
catkin_ws/src/set_goal/src/: SetGoal.cpp
catkin_ws/src/srrg2_navigation_2d/srrg2_map_server/: CMakeLists.txt
catkin_ws/src/srrg2_navigation_2d/srrg2_map_server/src/: image_loader.cpp  main.cpp
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d/: CMakeLists.txt  package.xml
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d/src/: CMakeLists.txt
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d/src/srrg2_navigation_2d/: CMakeLists.txt  instances.cpp  instances.h  local_path_planner.cpp  local_path_planner.h  localizer_2d.cpp  localizer_2d.h  navigation_2d_base.cpp  navigation_2d_base.h  obstacle_avoidance_base.cpp  obstacle_avoidance_base.h  planner_2d.cpp  planner_2d.h  planner_2d_dmap.cpp  planner_2d_helpers.h  planner_2d_path.cpp  planner_2d_search.cpp  planner_2d_utils.cpp
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_msgs/: CMakeLists.txt
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_msgs/msg/: CollisionAvoiderStatus.msg  LocalPathPlannerStatus.msg  PathFollowerStatus.msg
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_ros/: CMakeLists.txt  package.xml
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_ros/apps/: CMakeLists.txt  cinema_dumper.cpp  collision_avoider.cpp  collision_avoider_class.cpp  path_follower_app.cpp  path_provider.cpp  planning_robot.cpp
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_ros/src/: CMakeLists.txt
catkin_ws/src/srrg2_navigation_2d/srrg2_navigation_2d_ros/src/srrg2_navigation_2d_ros/: CMakeLists.txt  callback_handler.cpp  callback_handler.h  controller.cpp  controller.h  instances.cpp  instances.h  motion_controller.cpp  motion_controller.h  navigation_2d_map_requestor_ros.cpp  navigation_2d_map_requestor_ros.h  path_follower.cpp  path_follower.h  scan_handler.cpp  scan_handler.h  target_planner.cpp  target_planner.h  tf_helpers.cpp  tf_helpers.h
catkin_ws/src/srrg2_solver/srrg2_solver_calib_addons/: CMakeLists.txt
catkin_ws/src/srrg2_solver/srrg2_solver_star/app/: CMakeLists.txt  app_common.cpp  app_common.h  solver_app_graph_splitter.cpp  solver_app_star_solver.cpp  solver_app_star_solver_batch.cpp  solver_app_star_solver_gui.cpp
catkin_ws/src/srrg2_solver/srrg2_solver_star/src/srrg_solver_star/: CMakeLists.txt  factor_graph_batch_splitter.cpp  factor_graph_batch_splitter.h  instances.cpp  instances.h  star_labeler.cpp  star_labeler.h  star_solver.cpp  star_solver.h  star_solver_backbone.cpp  star_solver_bookkeeping.cpp  star_solver_gauge.cpp  star_solver_internals.cpp  star_solver_merge.cpp  star_solver_optimize.cpp  utils.h
catkin_ws/src/srrg_joystick_teleop_js2/: CMakeLists.txt  package.xml
catkin_ws/src/srrg_joystick_teleop_js2/src/: joy_event_scanner.cpp  joy_teleop_node.cpp
main/: index.html  login.html  package-lock.json  package.json  populate_rooms.js  register.html  server.js  test.js
rosnodejs_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
webctl/: Makefile  README  env.cpp  env.h  index.html  proc_control.c  proc_control.h  proc_shell  proc_shell.cpp  proc_shell.h  proc_shell_main.cpp  proc_webctl  proc_webctl_main.cpp  proc_websocket.cpp  proc_websocket.h  ros_sample.txt  simple  simple.c
webctl/configs/: index.html  srrg.js  test_config.txt
(+910 files in other folders)
