<?xml version="1.0"?>
<package format="2">
  <name>srrg2_navigation_2d_ros</name>
  <version>0.9.0</version>
  <description>The srrg2_navigation_2d_ros package</description>

  <maintainer email="giorgio@todo.todo">giorgio</maintainer>

  <license>TODO</license>

  <!-- ia depend includes build and run dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ia ros dependencies -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->

  <!-- ia srrg dependencies -->
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_core_ros</depend>
  <depend>srrg2_navigation_2d</depend>
  <depend>srrg2_qgl_viewport</depend>
  <depend>srrg2_navigation_2d_msgs</depend>
  <depend>srrg2_laser_slam_2d</depend>
  
</package>
